force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/Contact_Role_Validation_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used to validate Opportunity Contact Roles</description>
    <label>Contact Role Validation Setting</label>
    <pluralLabel>Contact Role Validation Settings</pluralLabel>
</CustomObject>