force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Comparison__c.field-meta.xml
<CustomField>
    <fullName>Comparison__c</fullName>
    <label>Comparison</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>