force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>How many of the particular Role do you need to compare? (If Comparison is &quot;less than&quot; then this would be if the Number of Roles is &lt; Count then thrown an error)</description>
    <inlineHelpText>How many of the particular Role do you need to compare? (If Comparison is &quot;less than&quot; then this would be if the Number of Roles is &lt; Count then thrown an error)</inlineHelpText>
    <label>to this Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>