force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>What error message do you want to display to the end user?</description>
    <inlineHelpText>What error message do you want to display to the end user?</inlineHelpText>
    <label>then display this Error Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>