force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Field_To_Check__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Check__c</fullName>
    <defaultValue>&quot;StageName&quot;</defaultValue>
    <description>What field on the Opportunity should trigger when to validate the Roles? Must be the API Field Name (e.g. My_Custom_Field__c NOT My Custom Field)</description>
    <inlineHelpText>What field on the Opportunity should trigger when to validate the Roles? Must be the API Field Name (e.g. My_Custom_Field__c NOT My Custom Field)</inlineHelpText>
    <label>If this field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>