force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Field_Value_to_Check__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_to_Check__c</fullName>
    <description>What is the value of the API Field Name To Check field? (example: Yes or maybe Closed/Won)</description>
    <inlineHelpText>What is the value of the API Field Name To Check field? (example: Yes or maybe Closed/Won)</inlineHelpText>
    <label>has this value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>