force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Name of the Role for the Contact Role that should be summed for checking/validating. Use &quot;ANY&quot; to count all Roles, use &quot;IsPrimary&quot; to ensure there is a Primary Contact.</description>
    <inlineHelpText>Name of the Role for the Contact Role that should be summed for checking/validating. Use &quot;ANY&quot; to count all Roles, use &quot;IsPrimary&quot; to ensure there is a Primary Contact.</inlineHelpText>
    <label>then count this Role</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>