force-app/main/default/objects/Contact_Role_Validation_Setting__mdt/fields/Role_Object__c.field-meta.xml
<CustomField>
    <fullName>Role_Object__c</fullName>
    <label>Role Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>